<resources>
    <string name="default_notification_channel_id">default</string>
    <string name="title_navbar_menyerap">Menyerap</string>
    <string name="title_navbar_menggali">Menggali</string>
    <string name="title_navbar_menguji">Menguji</string>
    <string name="title_navbar_merayakan">Merayakan</string>
    <string name="title_navbar_menjaga">Menjaga</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="txt_mohon_tunggu">Mohon tunggu…</string>
    <string name="txt_cari">Cari</string>
    <string name="txt_tab_linimasa">Linimasa</string>
    <string name="txt_tab_janji_politik">Janji Politik</string>
    <string name="create_question">Buat Pertanyaan</string>
    <string name="question_hint">Berikan pertanyaan singkat untuk kandidat Calon Presiden dan Calon Wakil Presiden 2019–2024. Gunakan bahasa yang baik dan jelas, yaa!</string>
    <string name="txt_empty_state">Oops.. data kosong</string>
    <string name="txt_empty_state_2">Belum ada apa-apa :(</string>
    <string name="txt_disematkan_dari">Disematkan dari </string>
    <string name="done_action">Done</string>
    <string name="empty_question_alert">Pertanyaan tidak boleh kosong!</string>
    <string name="question_simple_hint">Tulis pertanyaan terbaikmu di sini!</string>
    <string name="dummy_tweet_content">#SahabatBawaslu, Sentra  Gakkumdu berkomitmen untuk tidak memunculkan sikap ego sektoral antar personil, baik dari pihak Bawaslu,  Kepolisian,  maupun Kejaksaan dalam menegakkan hukum Pemilu dalam Rapat Koordinasi Nasional Sentra Gakkumdu,  di Jakarta, Rabu,  (5/12/2018).</string>
    <string name="tanya_kandidat_label">Tanya Kandidat</string>
    <string name="kata_kandidat_label">Kata Kandidat</string>
    <string name="login_failed_alert">Failed to login with Symbolic</string>
    <string name="tanya_kandidat_banner_text">Apa yang ingin kamu tanyakan kepada Capres &amp; Cawapres Jokowi-Ma\'ruf dan Prabowo-Sandi dan juga Apa yang ingin kamu tanyakan kepada Capres &amp; Cawapres Jokowi-Ma\'ruf dan Prabowo-Sandi</string>
    <string name="pilpres_banner_text">Halaman ini berisikan informasi dari channel Resmi twitter Jokowi - Makruf dan Prabowo - Sandi yang terdaftar di Bawaslu</string>
    <string name="kuis_banner_text">Ikuti quiz pilih jawaban tanpa kamu tahu itu jawaban siapa, kemudian tunggu kejutannya dan lihat hasil dari quiz ini</string>
    <string name="janpol_banner_text">Halaman ini berisikan informasi dari para user yang menginfokan kembali janji politik dari Capres, Cawapres maupun</string>
    <string name="question_long_hint">Berikan pertanyaan singkat untuk diajukan ke kedua kandidat Calon Presiden dan Calon Wakil Presiden 2019 -2024. Gunakan bahasa yang baik dan jelas. Kalau pertanyaan sudah ada, lebih asyik jangan ditanyakan lagi cukup kasih upvote pada pertanyaan yang sama aja yaa, biar Pak Presiden bisa segera jawab:</string>
    <string name="question_short_hint">Apa Pertanyaanmu buat calon Capres Indonesia?</string>
    <string name="lapor_short_hint">Menemukan Dugaan Pelanggaran Pemilu?</string>
    <string name="question_dummy_text">Kapan realisasi sistem tenaga kerja alih daya diterapkan seutuhnya? Kita ini insan bukan seekor sapi.</string>
    <string name="question_time_dummy_text">8 days ago</string>
    <string name="txt_sumber_dari">Sumber</string>
    <string name="txt_semua">Semua</string>
    <string name="txt_team_capres1">Tim Jokowi - Ma\'ruf</string>
    <string name="txt_team_capres2">Tim Prabowo - Sandi</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_reset">RESET</string>
    <string name="read_more_action">Read more…</string>
    <string name="apply_filter_action">Terapkan</string>
    <string name="user_label">User</string>
    <string name="filter_all_label">Semua</string>
    <string name="filter_unverified_label">Belum Verifikasi</string>
    <string name="filter_verified_label">Terverifikasi</string>
    <string name="filter_order_label">Urutan</string>
    <string name="filter_latest_label">Paling Baru</string>
    <string name="filter_most_voted_label">Paling Banyak Divoting</string>
    <string name="filter_trending_label">Trending</string>
    <string name="reset_action">Reset</string>
    <string name="delete_action_label">Hapus</string>
    <string name="copy_url_action_label">Salin Tautan</string>
    <string name="share_action_label">Bagikan</string>
    <string name="report_action_label">Laporkan Sebagai Spam</string>
    <string name="dummy_username">\@haryono</string>
    <string name="settings_action_label">Settings</string>
    <string name="user_bio_dummy">An ordinary netizen who likes to talk a lot. Like, a lot. Who cares anyway!</string>
    <string name="cluster_label">Cluster</string>
    <string name="cluster_name_dummy">Mancing Mania Jogja</string>
    <string name="cluster_info">Cluster menunjukkan preferensi kelompok kamu. Seperti wadah berisi kumpulan user yang memiliki kesamaan suatu hal; misalnya partai, alumni kampus, sekolah, organisasi, dan/atau komunitas tertentu. Dalam Cluster, kamu bisa menemukan atau mengumpulkan user-user lain dengan minat selaras.</string>
    <string name="biodata_label">Biodata</string>
    <string name="pantau_bersama_tagline">Pantau Bersama Pemilu 2019\nRayakan Demokrasi Dengan Partisipasi!</string>
    <string name="quiz_text_dummy">Pilihlah salah satu jawaban yang paling kamu sukai dari 2 pilihan yang ada. Ikuti kuis hingga selesai dan tunggu kejutan hasilnya</string>
    <string name="question_number_info">Pertanyaan %d dari %d pertanyaan</string>
    <string name="question_1_dummy">Visi untuk Indonesia ke depannya?</string>
    <string name="question_2_dummy">Misi untuk Indonesia kedepannya?</string>
    <string name="question_1_a_dummy">Terwujudnya Indonesia maju yang berdaulat, mandiri, dan berkepribadian, berlandaskan gotong-royong</string>
    <string name="question_1_b_dummy">Terwujudnya Bangsa dan Negara Republik Indonesia yang adil, makmur bermartabat, relijius, berdaulat di bidang politik, berdiri di atas kaki sendiri di bidang ekonomi, dan berkepribadian nasional yang kuat di bidang budaya serta menjamin kehidupan yang rukun antar warga negara tanpa memandang suku, agama, latar belakang sosial dan rasnya berdasarkan Pancasila dan UndangUndang Dasar Negara Republik Indonesia Tahun 1945</string>
    <string name="question_2_a_dummy">Peningkatan kualitas manusia Indonesia</string>
    <string name="question_2_b_dummy">Pertama membangun perekonomian nasional yang adil, makmur, berkualitas, dan berwawasan lingkungan dengan mengutamakan kepentingan rakyat Indonesia melalui jalan politik-ekonomi sesuai Pasal 33 dan 34 UUD Negara Republik Indonesia Tahun 1945</string>
    <string name="kuis_result">Dari hasil pilhan Quiz minggu pertama,\nRoni Handoko lebih suka jawaban dari Paslon no 1</string>
    <string name="txt_pilpres">Pilpres</string>
    <string name="txt_buka_di_aplikasi">Buka di Aplikasi Twitter</string>
    <string name="hint_create_janpol">Bagikan Janji Politik dengan bahasa yang baik dan mudah dimengerti. Sertakan ilustrasi, gambar, tautan sumber berita, atau referensi lain sebagai tambahan informasi.</string>
    <string name="hint_create_janpol_title">Judul Janji Politik</string>
    <string name="hint_create_janpol_content">Berikan deskripsi atau detil lebih lanjut terkait Janji Politik yang akan disampaikan di kolom ini.</string>
    <string name="verification_hint">Apabila akun kamu telah terverifikasi, badge centang hijau akan terpasang di profile. Ini menunjukkan informasi yang kamu bagikan sudah sesuai antara identitas online dan offline.\nSelain itu, poin-poin interaksi akun yang telah terverifikasi akan terarsip rapi dalam Symbolic id.</string>
    <string name="foto_dengan_ktp_hint">Jangan lupa pastikan seluruh bagian wajah dan KTP berada dalam satu frame. Agar lebih jelas, tidak perlu diedit berlebihan, ya :)</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="quiz_label">Quiz</string>
    <string name="txt_belum_diikuti">Belum Diikuti</string>
    <string name="txt_belum_selesai">Belum Selesai</string>
    <string name="txt_selesai">Selesai</string>
    <string name="txt_cluster">Cluster</string>
    <string name="txt_user">User</string>
    <string name="txt_belum_verifikasi">Belum Verifikasi</string>
    <string name="txt_terverifikasi">Terverifikasi</string>
    <string name="txt_semua_cluster">Semua Cluster</string>
    <string name="txt_semua_partai">Semua Partai</string>
    <string name="foto_ktp_hint">Potret foto KTP asli kamu dan pastikan semua terlihat jelas dalam satu frame.</string>
    <string name="foto_tanda_tangan_hint">Langkah terakhir verifikasi! Foto tandatangan kamu yang sama dengan KTP asli di atas kertas putih.</string>
    <string name="title_setting">Setting</string>
    <string name="label_ubah_profil">Ubah Profil</string>
    <string name="label_ubah_sandi">Ubah Sandi</string>
    <string name="label_ubah_data_lapor">Ubah Data Lapor</string>
    <string name="label_verifikasi">Verifikasi</string>
    <string name="label_badge">Badge</string>
    <string name="label_click_connect_twitter">Tap di bawah ini untuk menghubungkan Symbolic kamu dengan Twitter</string>
    <string name="label_click_connect_facebook">Tap di bawah ini untuk menghubungkan Symbolic kamu dengan Facebook</string>
    <string name="label_connect_with_twitter">CONNECT WITH TWITTER</string>
    <string name="label_connected_as">Connected as:</string>
    <string name="label_cluster">Cluster</string>
    <string name="label_support">SUPPORT</string>
    <string name="label_pusat_bantuan">Pusat Bantuan</string>
    <string name="label_pedoman_komunitas">Panduan Komunitas</string>
    <string name="label_tentang_pantau_bersama">Tentang Pantau Bersama</string>
    <string name="label_berikan_nilai_kami">Berikan Nilai Kami</string>
    <string name="label_bagikan_aplikasi">Bagikan Aplikasi Pantau Bersama</string>
    <string name="label_log_out">Log Out</string>
    <string name="submit">SUBMIT</string>
    <string name="change_profile">Ganti Gambar Profil</string>
    <string name="label_nama">Nama</string>
    <string name="label_username">Username</string>
    <string name="label_lokasi">Lokasi</string>
    <string name="label_lokasi_placeholder">Isi sesuai domisili kamu saat ini.</string>
    <string name="label_bio">Bio</string>
    <string name="label_deskripi_tentang_kamu">Deskripsikan kamu dengan singkat di sini.</string>
    <string name="label_pendidikan">Pendidikan</string>
    <string name="label_pendidikan_placeholder">Sertakan pendidikan terakhir kamu juga, ya.</string>
    <string name="label_pekerjaan">Pekerjaan</string>
    <string name="label_pekerjaan_placeholder">Sebutkan pekerjaan aktif kamu saat ini.</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="label_masukan_kata_sandi_lama">Masukan Kata Sandi Lama</string>
    <string name="label_kata_sandi_baru">Kata Sandi Baru</string>
    <string name="label_konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="label_ubah">UBAH</string>
    <string name="title_ubah_data_lapor">Ubah Data Lapor</string>
</resources>