<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pantaubersama.app.ui.search.person.filter.FilterOrangActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/layout_toolbar_light"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="22dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_label"
                android:fontFamily="@font/bw_modelica_bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/user_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/filter_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all_label"
                    android:checked="true"
                    android:theme="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/filter_unverified"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_unverified_label"
                    android:theme="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/filter_verified"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_verified_label"
                    android:theme="@style/RadioButtonStyle" />

            </RadioGroup>

        </LinearLayout>

        <include
            layout="@layout/layout_button_terapkan_filter"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
