<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/delete_tanya_kandidat_item_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_delete_with_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_action_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/copy_url_tanya_kandidat_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_url_action_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_tanya_kandidat_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_share"
            android:tint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_action_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_tanya_kandidat_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:foreground="?selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_lapor"
            android:tint="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_action_label"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:includeFontPadding="false"/>

    </LinearLayout>

</LinearLayout>